--- a/app/src/main/res/layout-w600dp/activity_step.xml
+++ b/app/src/main/res/layout-w600dp/activity_step.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/master_list_steps"
-    android:name="com.example.android.bakingapp.fragments.StepMasterListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.bakingapp.activities.StepActivity">
+    android:orientation="horizontal">
 
-</fragment>
+    <!--
+This layout is a two-pane layout for the master/detail flow.
+-->
+
+    <fragment
+        android:id="@+id/master_list_steps"
+        android:name="com.example.android.bakingapp.fragments.StepMasterListFragment"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="4"
+        tools:context="com.example.android.bakingapp.activities.StepActivity"/>
+
+    <!-- A small divider -->
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/darker_gray" />
+
+    <FrameLayout
+        android:id="@+id/step_detail_container"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="6" />
+
+</LinearLayout>
+
+
