--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -19,7 +19,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="20dp">
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/ic_room_service_black_24dp"
+                android:layout_gravity="center_horizontal"/>
 
             <TextView
                 android:id="@+id/title"
@@ -28,9 +35,8 @@
                 android:paddingLeft="@dimen/album_title_padding"
                 android:paddingRight="@dimen/album_title_padding"
                 android:paddingTop="@dimen/album_title_padding"
-
+                android:gravity="center"
                 android:textSize="@dimen/album_title"
-
                 android:typeface="monospace"
                 tools:text="some recipe"/>
 
