--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,14 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.bakingapp.activities.MainActivity">
 
+    <!-- Load the toolbar here -->
+    <include
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <android.support.v7.widget.RecyclerView
+        android:paddingTop="@dimen/list_padding"
         android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
