--- a/app/src/main/res/layout/activity_step.xml
+++ b/app/src/main/res/layout/activity_step.xml
@@ -1,11 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!-- Load the toolbar here -->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/master_list_steps"
-    android:name="com.example.android.bakingapp.fragments.StepMasterListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.android.bakingapp.activities.StepActivity">
+    android:layout_height="match_parent">
 
-</fragment>
+    <include xmlns:android="http://schemas.android.com/apk/res/android"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <fragment
+        android:id="@+id/master_list_steps"
+        android:name="com.example.android.bakingapp.fragments.StepMasterListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/list_padding"
+        tools:context="com.example.android.bakingapp.activities.StepActivity"/>
+
+</FrameLayout>
+
