--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,6 +22,8 @@
     <dimen name="step_list_font_size">20dp</dimen>
     <dimen name="step_list_padding">20dp</dimen>
 
+    <dimen name="list_padding">50dp</dimen>
+
     <!--
 Refer to App Widget Documentation for margin information
 http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
