--- a/app/src/main/res/layout/fragment_steps_master_list.xml
+++ b/app/src/main/res/layout/fragment_steps_master_list.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/steps_list_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-</ListView>
+<android.support.v7.widget.RecyclerView
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:paddingTop="@dimen/list_padding"
+android:id="@+id/steps_list_view"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"/>
