--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,10 @@
         https://guides.codepath.com/android/Using-the-App-Toolbar#reusing-the-toolbar-->
     </style>
 
+    <style name="img_size">
+        <!-- Customize your theme here. -->
+        <item name="android:layout_width">@dimen/imgs_size</item>
+        <item name="android:layout_height">@dimen/imgs_size</item>
+    </style>
+
 </resources>
