--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#ffa726</color>
     <color name="colorPrimaryDark">#c77800</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="ing_bck">#ffe0b2</color>
 </resources>
