--- a/app/src/main/res/layout/fragment_steps_master_list.xml
+++ b/app/src/main/res/layout/fragment_steps_master_list.xml
@@ -1,7 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:paddingTop="@dimen/list_padding"
-android:id="@+id/steps_list_view"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingTop="@dimen/list_padding">
+
+    <RelativeLayout
+        android:id="@+id/ing_block"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/ing_bck"
+        android:padding="20dp">
+
+        <TextView
+            android:id="@+id/ing_step_block"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:text="@string/ing_step_block"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/steps_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
